# nomad-distro-template

./: .env.north  .gitignore  .gitmodules  Dockerfile  README.md  README.md.j2  README.template.md  docker-compose.yaml  generate_env.sh  nomad.yaml  plugins.txt  pyproject.toml  requirements.txt  template_README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: build-app.yml  dependabot.yml  docker-publish.yml  initialize.yml  zip-config.yml
configs/: _base.conf  _http.conf  _https.conf  _temporal-sql.yaml  gzip  locations  locations.conf  nginx.conf  nginx_base_conf  nginx_http.conf  nginx_https.conf  nomad.yaml
docker/: README.md  docker-compose.yaml
docker/configs/: nginx_http.conf
examples/plugins/normalizer/: Dockerfile  README.md  nomad.yaml  pyproject.toml
examples/plugins/normalizer/nomadnormalizerexample/: __init__.py  nomad_plugin.yaml  normalizer.py
examples/plugins/normalizer/tests/: test_normalizer.py
examples/plugins/parser/: README.md  nomad.yaml  pyproject.toml  requirements.txt
examples/plugins/parser/.github/workflows/: actions.yaml
examples/plugins/parser/nomadparserexample/: nomad_plugin.yaml  parser.py
examples/plugins/parser/tests/: test_parser.py
examples/plugins/parser/tests/data/: test.example-format.txt
kubernetes/: README.md  values.yaml
monitoring/grafana/provisioning/dashboards/: cadvisor.json  temporal-sdk-core.json  temporal-server.json  temporalsdk.json
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/prometheus/: prometheus.yml  rules.yml  targets.json
nomad-oasis/: docker-compose.yaml
nomad-oasis/configs/: nomad.yaml
nomad-oasis_files/nomad-oasis/: docker-compose.yaml
nomad-oasis_files/scripts/: update_nomad_oasis_dir.sh
ops/kubernetes/nomad/: Chart.yaml  README.md  values.yaml
ops/kubernetes/nomad/examples/: oasis-minikube-values.yaml
ops/kubernetes/nomad/templates/: NOTES.txt  _helpers.tpl  configmap.yml  hpa.yaml  ingress-api.yaml  ingress.yaml  secrets.yaml
ops/kubernetes/nomad/templates/adminconsole/: deployment.yaml
ops/kubernetes/nomad/templates/app/: deployment.yaml
ops/kubernetes/nomad/templates/cpuworker/: deployment.yaml
ops/kubernetes/nomad/templates/gpuworker/: deployment.yaml
ops/kubernetes/nomad/templates/proxy/: configmap.yml  deployment.yaml
ops/kubernetes/nomad/templates/worker/: deployment.yaml
ops/kubernetes/scripts/: check-status.sh  dev-utils.sh  minikube-setup.sh
scripts/: _initialize_readme.py  _setup_temporal.sh  backup-mongo.sh  generate-env.sh  generate-prometheus-targets.sh  generate_python_dependencies.sh  render_readme.py  setup.sh  update_nomad_oasis_dir.sh
ssl/: selfsigned.crt  selfsigned.key
tests/: conftest.py  docker-compose.yml  nomad.yaml  test_actions.py  test_app_entry_points.py  test_example_uploads.py
